--- a/rubiks-cube-fe/package.json
+++ b/rubiks-cube-fe/package.json
@@ -1,5 +1,10 @@
 {
   "devDependencies": {
     "vite": "^6.2.3"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.0.17",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.17"
   }
 }
