--- a/rubiks-cube-be/RubiksCube/.vscode/launch.json
+++ b/rubiks-cube-be/RubiksCube/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": ".NET Launch",
       "type": "coreclr",
       "request": "launch",
-      "preLaunchTask": "build",
+      //"preLaunchTask": "build",
       "program": "${workspaceFolder}/bin/Debug/net9.0/linux-x64/RubiksCube",
       "args": [],
       "cwd": "${workspaceFolder}",
